--- a/hdc_host/style.css
+++ b/hdc_host/style.css
@@ -1,3 +1,150 @@
-h1{
-    color: yellowgreen;
+/* geral */
+*{
+    margin: 0;
+    padding: 0;
+    font-family: helvetica;
+    box-sizing: border-box;
+}
+
+h1, h2, h3{
+    color: #333;
+}
+p{
+  color: #70747a;  
+}
+
+/* navbar */
+
+.navbar-container{
+    width: 100%;
+    height: 80px;
+    background-color: #313a42;
+    padding: 0 2rem;
+}
+
+nav{
+    position: relative;
+}
+
+.logo{
+    width: 50px;
+    margin-top: 15px;
+    filter: drop-shadow(2px 1px 2px rgba(122, 122, 122, 0.7))
+}
+.navbar-items{
+    position: absolute;
+    right: 0;
+    height: 80px;
+    line-height: 80px;
+    margin: 0;
+    display: inline-block;
+}
+
+.navbar-items li{
+    display: inline-block;
+    text-transform: uppercase;
+    margin-left: 25px;
+}
+
+.navbar-items a{
+    color: #fff;
+    text-decoration: none;
+    transition: 0,5s;
+}               
+
+.navbar-items a:hover{
+    color:#CCC;
+}
+
+.default-btn{
+    padding: 15px 20px;
+    background-color: #2cc76a;
+    border-radius: 5px;
+
+}
+.navbar-items .default-btn:hover{
+    background-color: #22bb5f;
+    color: #fff;
+}
+
+/* main banner */
+
+.main-banner{
+    
+    background-size:cover;
+    background-position: center;
+    background-image: url(img/city2.jpg);
+    padding: 10rem 0;
+}
+
+.main-banner h1, .main-banner p{
+    color: #fff;
+    text-align: center;
+    font-weight: bold;
+    text-shadow: #000 4px 3px 4px;
+}
+
+.main-banner h1{
+    font-size: 50px;
+}
+.main-banner p{
+    font-size: 35px;
+}
+
+/* Services */
+
+.services-container{
+    padding: 5rem 0;
+}
+
+.services-container ul {
+    display: flex;
+    width: 90%;
+    margin: 0 auto;
+    /* Adicione esta linha: Se não couber, quebra para a próxima linha */
+    flex-wrap: wrap; 
+    /* Remove os marcadores de lista que podem atrapalhar */
+    list-style: none; 
+}
+
+/* .services-container li {
+    /* Garante que o item ocupe pelo menos 30% da largura do ul */
+    /* flex-basis: 30%;  */
+    /* padding: 15px;  */
+    /* margin: 10px;  */
+/* } */
+
+.services-container li {
+    flex: 1 1 200px;
+    list-style: none;
+    text-align: center;
+    padding: 20px;
+}
+
+.fas {
+    font-size: 60px;
+    margin-bottom: 15px;
+}
+
+.fa-shield-alt{
+    color: #2cc76a;
+}
+
+.fa-rocket{
+    color:#ef3f29 ;
+}
+
+.fa-comments{
+    color: #ef8f29;
+}
+
+.services-container h3{
+     margin-bottom: 25px;
+     font-size: 25px;
+}
+
+.services-container p{
+    font-size: 14px;
+    text-transform: lowercase;
+    font-weight: normal;
 }
