--- a/hdc_host/style.css
+++ b/hdc_host/style.css
@@ -332,3 +332,45 @@ footer{
     font-weight: bold;
     margin: 50px 0 100px;
 }
+
+/* Responsividade */
+
+/* small laptops a partir de 1100px */
+@media(max-width: 1100px){
+    .plans-container{
+        width: 95%;
+
+    }
+    .plan{
+        margin: 0 5px;
+    }
+
+}
+
+/* tablet a apartir 900px */
+
+@media(max-width: 900px){
+    
+    .main-banner p{
+        padding: 0 6rem;
+        font-size: 32px;
+    }
+    
+        .services-container li.fa-shield-alt h3,
+        .services-container li.fa-rocket h3,
+        .services-container li.fa-comments h3 {
+            padding-top: 30px;
+        }
+
+
+        .plan{
+            min-width: 150px;
+padding-left: 0%;
+        }
+          /* .pricing-container{
+               padding: 15px;
+                
+            } */
+
+}
+
