imagem fundo alterada

--- a/hdc_host/style.css
+++ b/hdc_host/style.css
@@ -80,7 +80,7 @@ nav{
     
     background-size:cover;
     background-position: center;
-    background-image: url(img/city2.jpg);
+    background-image: url(img/city3.png);
     
     padding: 10rem 0;
     color: #fff; /* garante que todo texto dentro seja branco */
