--- a/Flexbox/style.css
+++ b/Flexbox/style.css
@@ -144,3 +144,19 @@ border: 1px solid red;
 .basis .big{
     flex-grow: 1;
 }
+
+.shrink{
+    display: flex;
+
+}
+
+.shrink.box{
+    flex-grow: 1;
+    /* flex-shrink: 1; */
+    flex-basis: 250px;
+    width: auto;
+}
+
+.shrink .small{
+    flex-shrink: 3;
+}
